deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perf-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perf-1
  template:
    metadata:
      annotations:
        pods.k8s.aws/labels: preserve
        pods.k8s.aws/l1: preserve-v1
        pods.k8s.aws/l2: preserve-v2
      labels:
        app: perf-1
        ports: multi
        label-key-0: label-value-0
        label-key-1: label-value-1
        label-key-10: label-value-10
        label-key-100: label-value-100
        label-key-101: label-value-101
        label-key-102: label-value-102
        label-key-103: label-value-103
        label-key-104: label-value-104
        label-key-105: label-value-105
        label-key-106: label-value-106
        label-key-107: label-value-107
        label-key-108: label-value-108
        label-key-109: label-value-109
        label-key-11: label-value-11
        label-key-110: label-value-110
        label-key-111: label-value-111
        label-key-112: label-value-112
        label-key-113: label-value-113
        label-key-114: label-value-114
        label-key-115: label-value-115
        label-key-116: label-value-116
        label-key-117: label-value-117
        label-key-118: label-value-118
        label-key-119: label-value-119
        label-key-12: label-value-12
        label-key-120: label-value-120
        label-key-121: label-value-121
        label-key-122: label-value-122
        label-key-123: label-value-123
        label-key-124: label-value-124
        label-key-125: label-value-125
        label-key-126: label-value-126
        label-key-127: label-value-127
        label-key-13: label-value-13
        label-key-14: label-value-14
        label-key-15: label-value-15
        label-key-16: label-value-16
        label-key-17: label-value-17
        label-key-18: label-value-18
        label-key-19: label-value-19
        label-key-2: label-value-2
    spec:
      nodeSelector:
        allow-multi-deploy: enabled
      containers:
        - name: multi
          image: "kishorj/hello-multi:v1"
          ports:
            - name: http
              containerPort: 80
            - name: http3
              containerPort: 83
            - name: http4
              containerPort: 84
            - name: http5
              containerPort: 85
            - name: http6
              containerPort: 86
        - name: pause
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.9
          ports:
            - name: http2
              containerPort: 82
        - name: pause2
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.9
        - name: pause3
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.9
