policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: para-hello-1
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 80
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          allow: egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allow: ingress
    ports:
    - port: 443
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: hello-app-2
  policyTypes:
  - Ingress
  - Egress
